--- a/src/Gogole/MainBundle/Resources/views/Main/connexion.html.twig
+++ b/src/Gogole/MainBundle/Resources/views/Main/connexion.html.twig
@@ -15,7 +15,7 @@
 			<div class="container">
 
 		      <div id="login">
-		      	<img class="col-md-offset-4" src="{{asset('bundles/gogolemain/images/logo.png') }}" alt="logo"></img>
+		      	<img class="col-xs-offset-4 logo" src="{{asset('bundles/gogolemain/images/logo.png') }}" alt="logo"></img>
 		        {% block fos_user_content %}
 				{% endblock %}
 		      </div>
