--- a/src/Gogole/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Gogole/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -5,7 +5,7 @@
 	    	{{ form_widget(form) }}
 	  	
 	        <input class="btn btn-default pull-right" type="submit" value="{{ 'registration.submit'|trans }}" />
-	        <a class="btn btn-default pull-right" href="{{path('fos_user_security_login')}}">Connexion</a>
+	        <a class="btn btn-default pull-right" href="{{path('fos_user_security_login')}}">Se connecter</a>
 	    </div>
 	</form>
 
